2008-08-13  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.24.modules: Metacity has
	branched for gnome-2-24.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc: added missing jhbuildbot slave options.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* buildbot/: buildbot master server.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py, jhbuild/config.py: jhbuild bot --start
	command, to start a slave buildbot; and jhbuild bot --step command
	to execute buildbot steps.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/utils/trayicon.py, tests/mock.py: updated for new check
	options, and workaround zenity failing with fake stdin/stdout.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py, jhbuild/defaults.jhbuildrc,
	jhbuild/modtypes/autotools.py, jhbuild/modtypes/waf.py: added a new
	'forcecheck' option, so make check is run even when build is skipped;
	also synced code in waf.py.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: new 'jhbuild bot' command; with --setup
	option to create a buildbot slave instance.

2008-08-12  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated cairo and pixman
	to latest development snapshots. (closes: #546752)

2008-08-11  Paolo Borelli  <pborelli@katamail.com>

	* modulesets/gnome-suites-2.24.modules: remove some deps from gedit
	and gtksourceview.

2008-08-10  Björn Lindqvist  <bjourne@gmail.com>

	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules: gnome-keyring depends on
	gconf, new dependency in 2.22. (closes #547194)

2008-08-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: pygtksourceview branched for
	GNOME 2.22.

2008-08-09  Luca Ferretti  <elle.uca@libero.it>
	
	* modulesets/gnome-2.24.modules: Added gnome-sound-theme.

2008-08-07  Murray Cumming  <murrayc@murrayc.com>
