@@ -1,3 +1,8 @@
+2008-08-13  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/bot.py: updated to work with jhbuildbot installed
+	twisted and buildbot.
+
 2008-08-13  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* modulesets/gnome-suites-2.24.modules: Metacity has
